--- a/index.html
+++ b/index.html
@@ -298,18 +298,19 @@
                                 </div>
                                 <div>
                                     <h4 class="title">
-                                        <a class="stretched-link"
-                                            >Legal Consultation</a
+                                        <a class="stretched-link">
+                                            Family Law</a
                                         >
                                     </h4>
                                     <p class="description">
-                                        We provide expert guidance tailored to
-                                        your specific legal concerns, offering
-                                        advice that aligns with your situation,
-                                        goals, and legal standing. Our
-                                        consultations empower you to make
-                                        informed decisions, regardless of the
-                                        complexity of the case.
+                                        Whether you are dealing with a divorce,
+                                        child custody, or inheritance matters,
+                                        our family law services offer
+                                        compassionate legal support. We handle a
+                                        wide range of family issues, ensuring
+                                        that your legal rights and family
+                                        interests are protected throughout the
+                                        process.
                                     </p>
                                 </div>
                             </div>
@@ -327,18 +328,19 @@
                                 </div>
                                 <div>
                                     <h4 class="title">
-                                        <a class="stretched-link"
-                                            >Document Preparation and Review</a
+                                        <a class="stretched-link">
+                                            Employment Law</a
                                         >
                                     </h4>
                                     <p class="description">
-                                        Our team assists with drafting,
-                                        reviewing, and organizing legal
-                                        documents essential to your case. We
-                                        ensure that all documents are
-                                        meticulously prepared, enabling a
-                                        smoother legal process and reducing
-                                        potential delays.
+                                        Our employment law experts assist both
+                                        employers and employees in understanding
+                                        their rights and obligations. We provide
+                                        guidance on labor disputes, contracts,
+                                        wrongful termination, and workplace
+                                        policies, ensuring that employment
+                                        relationships are legally sound and
+                                        fair.
                                     </p>
                                 </div>
                             </div>
@@ -356,17 +358,19 @@
                                 </div>
                                 <div>
                                     <h4 class="title">
-                                        <a class="stretched-link"
-                                            >Litigation Support</a
+                                        <a class="stretched-link">
+                                            Real Estate Services</a
                                         >
                                     </h4>
                                     <p class="description">
-                                        Our litigation services include court
-                                        representation, dispute resolution, and
-                                        advocacy for various legal issues. Led
-                                        by experienced attorneys, our team is
-                                        committed to defending your rights and
-                                        seeking favorable resolutions.
+                                        Our real estate legal services ensure
+                                        smooth transactions, from property
+                                        acquisitions to leases and disputes. We
+                                        provide expert advice on property
+                                        rights, zoning laws, and contracts,
+                                        helping clients navigate the
+                                        complexities of real estate law with
+                                        confidence.
                                     </p>
                                 </div>
                             </div>
@@ -385,16 +389,18 @@
                                 <div>
                                     <h4 class="title">
                                         <a class="stretched-link"
-                                            >Compliance and Regulatory Advice</a
+                                            >Legalization Services</a
                                         >
                                     </h4>
                                     <p class="description">
-                                        Stay compliant with all relevant laws
-                                        and regulations with our expert
-                                        compliance services. We offer guidance
-                                        on navigating legal requirements,
-                                        particularly in regulated industries,
-                                        helping to avoid potential risks.
+                                        Navigating the legal process of document
+                                        legalization can be complicated. Our
+                                        legalization services help individuals
+                                        and businesses authenticate documents
+                                        for use both domestically and
+                                        internationally, ensuring compliance
+                                        with local and international
+                                        regulations.
                                     </p>
                                 </div>
                             </div>
@@ -412,18 +418,18 @@
                                 </div>
                                 <div>
                                     <h4 class="title">
-                                        <a class="stretched-link"
-                                            >Corporate and Business Law
-                                            Services</a
+                                        <a class="stretched-link">
+                                            Criminal Law</a
                                         >
                                     </h4>
                                     <p class="description">
-                                        Our business law experts provide legal
-                                        support for corporate needs, from entity
-                                        formation to contractual agreements. We
-                                        strive to assist businesses in
-                                        maintaining compliance and optimizing
-                                        legal strategies for sustainable growth.
+                                        If you are facing criminal charges, our
+                                        experienced criminal law team offers
+                                        comprehensive defense strategies. We
+                                        represent clients in various criminal
+                                        cases, from misdemeanors to serious
+                                        offenses, ensuring that your case is
+                                        handled with expertise and care.
                                     </p>
                                 </div>
                             </div>
@@ -441,18 +447,19 @@
                                 </div>
                                 <div>
                                     <h4 class="title">
-                                        <a class="stretched-link"
-                                            >Dispute Resolution and Mediation</a
+                                        <a class="stretched-link">
+                                            Corporate Law</a
                                         >
                                     </h4>
                                     <p class="description">
-                                        We provide mediation and dispute
-                                        resolution services aimed at achieving
-                                        amicable settlements outside of court,
-                                        reducing stress and costs. Our mediators
-                                        are skilled in creating cooperative
-                                        solutions that respect the interests of
-                                        all parties.
+                                        Our corporate law services are designed
+                                        to support businesses at every stage.
+                                        From company formation and mergers to
+                                        intellectual property rights and
+                                        contract disputes, we offer tailored
+                                        legal solutions to help your business
+                                        operate smoothly and stay compliant with
+                                        the law.
                                     </p>
                                 </div>
                             </div>
